# racplusplus

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  RAC.h  README.md  cmake_install.cmake  dependencies_linux.sh  dependencies_mac.sh  dependencies_windows.ps1  environment.yml  pyproject.toml  racplusplus  racplusplus.cpp  setup.py
.github/workflows/: rac-conda.yml
pytest/: test_racpp.py
racplusplus.egg-info/: PKG-INFO  SOURCES.txt
src/: binder.cpp  racplusplus.cpp  racplusplus.h  racplusplus_headeronly.cpp  src
src/racplusplus/: _racplusplus.cpp  _racplusplus.h  pybind11
src/racplusplus.egg-info/: PKG-INFO  SOURCES.txt
test/: benchmarks.py  test_wrapper.ipynb  test_wrapper.py
